--- a/templates/admin/cabecera.html
+++ b/templates/admin/cabecera.html
@@ -14,17 +14,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand navbar-light bg-light">
-        <div class="nav navbar-nav">
-            <a class="nav-item nav-link" href="/">Inicio </a>
-            <a class="nav-item nav-link" href="/libros">Libros</a>
-            <a class="nav-item nav-link" href="/nosotros">Nosotros</a>
-            <a class="nav-item nav-link" href="/login">Login</a>
-
-
-        </div>
-    </nav>
-    <div class="container">
-
-    </div>
-    <br>
+  <nav class="navbar navbar-expand navbar-light bg-light">
+      <div class="nav navbar-nav">
+          <a class="nav-item nav-link active" href="#" aria-current="page">Libros <span class="visually-hidden">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Login</a>
+      </div>
+  </nav>
