--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -2,7 +2,17 @@
 
 
 
-Inicio del Administrador
+<div class="p-5 bg-ligth">
+    <div class="container">
+            <h1>Bienvenid@ al administrador del sitio</h1>
+            <p>Aqui podra administrar los libros del sitio WEB</p>
+            <hr class="my-2">
+            <p>More Info</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="/libros" role="button">Empezar la gestion</a>
+            </p>
+    </div>
+</div>
 
 
 
