--- a/templates/admin/libros.html
+++ b/templates/admin/libros.html
@@ -1,8 +1,45 @@
 {% include 'admin/cabecera.html' %}
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-5">
+            <div class="card">
+        <div class="card-header">
+            Datos del libro
+        </div>
+        <div class="col-md-4">
+            <form action="" method="post">
+
+                <div class="mb-3">
+                    <label for="txtNombre" class="form-label">Nombre:</label>
+                    <input type="text" class="form-control" name="txtNombre"
+                    id="txtNombre" aria-describedby="helpId" placeholder="Escriba el nombre del libro">
+                </div>
+
+                <div class="mb-3">
+                  <label for="txtimagen" class="form-label">Imagen</label>
+                  <input type="text"
+                    class="form-control" name="txtimagen" id="txtimagen" aria-describedby="helpId" placeholder="Seleccione la imagen">
+                </div>
+
+                <div class="mb-3">
+                    <label for="txtURL" class="form-label">URL Descarga:</label>
+                    <input type="text"
+                      class="form-control" name="txtURL" id="txtURL" aria-describedby="helpId" placeholder="Escriba la URL de descarga">
+                  </div>
+
+            </form>
+        </div>
+        <div class="card-footer text-muted">
+            footer
+        </div>
+            </div>
+        </div>
+        
+    </div>
+</div>
 
 
-Administrador de libros
 
 
 
