--- a/templates/admin/libros.html
+++ b/templates/admin/libros.html
@@ -2,44 +2,75 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-5">
-            <div class="card">
-        <div class="card-header">
-            Datos del libro
-        </div>
         <div class="col-md-4">
-            <form action="" method="post">
-
-                <div class="mb-3">
-                    <label for="txtNombre" class="form-label">Nombre:</label>
-                    <input type="text" class="form-control" name="txtNombre"
-                    id="txtNombre" aria-describedby="helpId" placeholder="Escriba el nombre del libro">
+            
+            <div class="card">
+                <div class="card-header">
+                    Datos del Libro
                 </div>
+                <div class="card-body">
+                    
+                    <form action="/admin/libros/guardar" method="post">
 
-                <div class="mb-3">
-                  <label for="txtimagen" class="form-label">Imagen</label>
-                  <input type="text"
-                    class="form-control" name="txtimagen" id="txtimagen" aria-describedby="helpId" placeholder="Seleccione la imagen">
+                        <div class="mb-3">
+                            <label for="txtNombre" class="form-label">Nombre:</label>
+                            <input type="text" class="form-control" name="txtNombre"
+                            id="txtNombre" aria-describedby="helpId" placeholder="Escriba el nombre del libro">
+                        </div>
+        
+                        <div class="mb-3">
+                          <label for="txtimagen" class="form-label">Imagen</label>
+                          <input type="text"
+                            class="form-control" name="txtimagen" id="txtimagen" aria-describedby="helpId" placeholder="Seleccione la imagen">
+                        </div>
+        
+                        <div class="mb-3">
+                            <label for="txtURL" class="form-label">URL Descarga:</label>
+                            <input type="text"
+                              class="form-control" name="txtURL" id="txtURL" aria-describedby="helpId" placeholder="Escriba la URL de descarga">
+                          </div>
+        
+                          <button type="submit" class="btn btn-primary">Agregar</button>
+        
+                    </form>
+
                 </div>
-
-                <div class="mb-3">
-                    <label for="txtURL" class="form-label">URL Descarga:</label>
-                    <input type="text"
-                      class="form-control" name="txtURL" id="txtURL" aria-describedby="helpId" placeholder="Escriba la URL de descarga">
-                  </div>
-
-            </form>
-        </div>
-        <div class="card-footer text-muted">
-            footer
-        </div>
+                <div class="card-footer text-muted">
+                    Footer
+                </div>
             </div>
+
+        </div>
+        <div class="col-md-7">
+            
+            <div class="table-responsive">
+                <table class="table table-primary">
+                    <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Imagen</th>
+                            <th scope="col">URL</th>
+                            <th scope="col">Acciones</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="">
+                            <td scope="row">1</td>
+                            <td>Python</td>
+                            <td>Imagen.jpg</td>
+                            <td>URL</td>
+                            <td>Editar | Eliminar</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
         </div>
         
     </div>
 </div>
-
-
 
 
 
